<resources>
    <string name="app_name">JunGang</string>
    <string name="title_information">Information</string>
    <string name="title_knowledge">Knowledge</string>
    <string name="title_social">Social</string>
    <string name="title_profile">Profile</string>
    <string name="profile_demo_user_name">AimerNeige</string>
    <string name="profile_demo_personal_signature">Always Keep Calm And Believe Yourself.</string>
    <string name="profile_personality_display">Personality Display</string>
    <string name="profile_my_favourite">My Favorites</string>
    <string name="profile_new_friend">New Friend</string>
    <string name="profile_feedback">Feedback</string>
    <string name="social_article_text">Article</string>
    <string name="social_followig">Followig</string>
    <string name="social_message">Message</string>
    <string name="social_post">Post</string>
    <string name="social_explore">Explore</string>
    <string name="information_hot">Hot</string>
    <string name="information_videos">Videos</string>
    <string name="information_history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>