<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_information">

    <fragment
        android:id="@+id/navigation_information"
        android:name="com.aimerneige.huawu.jungang.ui.information.InformationFragment"
        android:label="@string/title_information"
        tools:layout="@layout/fragment_information" />

    <fragment
        android:id="@+id/navigation_knowledge"
        android:name="com.aimerneige.huawu.jungang.ui.knowledge.KnowledgeFragment"
        android:label="@string/title_knowledge"
        tools:layout="@layout/fragment_knowledge" />

    <fragment
        android:id="@+id/navigation_social"
        android:name="com.aimerneige.huawu.jungang.ui.social.SocialFragment"
        android:label="@string/title_social"
        tools:layout="@layout/fragment_social" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.aimerneige.huawu.jungang.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>