<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.social.SocialFragment">

    <!-- TODO: Search Bar -->
    <TextView
        android:id="@+id/social_search_bar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="I'm the Search Bar (TODO)"
        android:textSize="28sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/social_search_bar">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/social_following_imgbutton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="4dp"
                android:background="@drawable/circle_background_blue"
                android:src="@drawable/ic_social_following_white_64dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/social_followig" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/social_message_imgbutton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle_background_yellow"
                android:src="@drawable/ic_social_message_white_64dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/social_message" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle_background_purple"
                android:src="@drawable/ic_social_post_white_64dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/social_post" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="4dp"
                android:layout_marginVertical="4dp"
                android:layout_weight="1"
                android:background="@drawable/circle_background_green"
                android:src="@drawable/ic_social_explore_white_64dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/social_explore" />

        </LinearLayout>

    </LinearLayout>

    <com.allen.library.SuperTextView
        android:id="@+id/social_article_text"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="36dp"
        android:background="@color/PowderBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:sLeftBottomTextSize="3sp"
        app:sLeftBottomTextString=" "
        app:sLeftTextSize="28sp"
        app:sLeftTextString="@string/social_article_text"
        app:sLeftTopTextSize="3sp"
        app:sLeftTopTextString=" "
        app:sUseRipple="false" />

    <!-- TODO: Cover -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="12dp"
        android:layout_marginBottom="64dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/social_article_text">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="8dp"
            android:background="@color/AOTAKE_LIGHT"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="8dp"
            android:background="@color/USUKI"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline10" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>