<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/button_settings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="#00000000"
            android:src="@drawable/ic_settings_gray_48dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_margin="12dp"
            android:src="@drawable/profile_image"
            app:civ_border_color="@color/black"
            app:civ_border_width="2dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/profile_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="start"
                android:text="@string/profile_demo_user_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8" />

            <TextView
                android:id="@+id/profile_personal_signature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="start"
                android:text="@string/profile_demo_personal_signature"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:layout_constraintVertical_bias="0.2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.allen.library.SuperTextView
        android:id="@+id/profile_personality_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:sBottomDividerLineMarginLR="0dp"
        app:sCenterBottomTextSize="4sp"
        app:sCenterBottomTextString=" "
        app:sCenterTextColor="@color/green"
        app:sCenterTextSize="24sp"
        app:sCenterTextString="@string/profile_personality_display"
        app:sCenterTopTextSize="4sp"
        app:sCenterTopTextString=" "
        app:sDividerLineColor="@color/green"
        app:sDividerLineHeight="5dp"
        app:sDividerLineType="both"
        app:sShapeStrokeDashGap="8dp"
        app:sShapeStrokeDashWidth="5dp"
        app:sTopDividerLineMarginLR="0dp"
        app:sUseRipple="true" />

    <!-- TODO: Picture -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_personality_display">

        <ImageButton
            android:id="@+id/profile_personality_image_1"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_gravity="center"
            android:background="#00000000"
            android:src="@drawable/blue"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/profile_personality_image_2"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_gravity="center"
            android:background="#00000000"
            android:src="@drawable/green"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/profile_personality_image_3"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_gravity="center"
            android:background="#00000000"
            android:src="@drawable/red"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/profile_personality_image_add"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_gravity="center"
            android:background="#00000000"
            android:src="@drawable/ic_add_gray_64dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.allen.library.SuperTextView
        android:id="@+id/profile_stv_my_favourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="0dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:sLeftBottomTextSize="12sp"
        app:sLeftBottomTextString=" "
        app:sLeftTextColor="@color/black"
        app:sLeftTextGravity="left"
        app:sLeftViewMarginLeft="24dp"
        app:sLeftTextSize="24sp"
        app:sLeftTextString="@string/profile_my_favourite"
        app:sLeftTopTextSize="12sp"
        app:sLeftTopTextString=" " />

    <com.allen.library.SuperTextView
        android:id="@+id/profile_stv_new_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="0dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_stv_my_favourite"
        app:sLeftBottomTextSize="12sp"
        app:sLeftBottomTextString=" "
        app:sLeftTextColor="@color/black"
        app:sLeftTextGravity="left"
        app:sLeftViewMarginLeft="24dp"
        app:sLeftTextSize="24sp"
        app:sLeftTextString="@string/profile_new_friend"
        app:sLeftTopTextSize="12sp"
        app:sLeftTopTextString=" " />

    <com.allen.library.SuperTextView
        android:id="@+id/profile_stv_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="0dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_stv_new_friend"
        app:sLeftBottomTextSize="12sp"
        app:sLeftBottomTextString=" "
        app:sLeftTextColor="@color/black"
        app:sLeftTextGravity="left"
        app:sLeftViewMarginLeft="24dp"
        app:sLeftTextSize="24sp"
        app:sLeftTextString="@string/profile_feedback"
        app:sLeftTopTextSize="12sp"
        app:sLeftTopTextString=" " />

</androidx.constraintlayout.widget.ConstraintLayout>